# pycalc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/calculator/: logic.py  main.py
tests/: test_logic.py  test_smoke.py
